# BeeLive

./: .gitmodules  API_Documentation.yaml  README.md  Usecase.md  class_diagram.drawio  oas3.yaml
Deliverable 3/: deliverable3.aux  deliverable3.fdb_latexmk  deliverable3.fls  deliverable3.tex
Deliverable-1/: .gitignore  categories.bpmn  deliverable1.aux  deliverable1.fdb_latexmk  deliverable1.fls  deliverable1.idx  deliverable1.ilg  deliverable1.ind  deliverable1.out  deliverable1.tex  deliverable1.toc  details.bpmn  diagram_1.bpmn  gestione_evento-modifica.bpmn  gestione_evento.bpmn  list.bpmn  sottocategorie.bpmn  storico.bpmn  zone.bpmn
Deliverable-2/: .gitignore  ClassDiagram.drawio  ClassDiagram_New.drawio  ComponentDiagram.drawio  ComponentDiagram_management.drawio  ComponentDiagram_overview.drawio  OCL.ocl  beelive.tex  class_diagram.drawio  class_diagram_Dennis.drawio  class_diagram_Elia.drawio  deliverable2.aux  deliverable2.fdb_latexmk  deliverable2.fls  deliverable2.idx  deliverable2.ilg  deliverable2.ind  deliverable2.out  deliverable2.tex  deliverable2.toc  ocl_new.md  ocl_new.ocl
Deliverable-3/: .gitignore  deliverable3.aux  deliverable3.fdb_latexmk  deliverable3.fls  deliverable3.ilg  deliverable3.out  deliverable3.tex  deliverable3.toc
Products/management_server/: Cargo.toml  Dockerfile
Products/management_server/assets/CA/: casdoor.pem
Products/management_server/scripts/: mongobd_create_test_authorized_user.py
Products/management_server/src/: authentication_sdk.rs  dao.rs  event_manager.rs  event_processor.rs  locker.rs  main.rs  tests.rs  utils.rs
Products/management_server/src/dao/: objects.rs
Products/management_server/src/event_processor/: errors.rs  test.rs
Products/management_server/tests/: test_management_server.rs
Products/public_server/: Cargo.toml  Dockerfile
Products/public_server/scripts/: get_events.py  get_single_event.py
Products/public_server/src/: '  dao.rs  event_processor.rs  main.rs  tests.rs
Products/public_server/src/dao/: objects.rs
Products/public_server/tests/: test_public_server.rs
Sprint-1/: API.yaml  (+3 more)
(+186 files in other folders)
