[package]
name = "management_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
env_logger = "0.11.3"
mongodb = "2.8.2"
serde = "1.0.201"
futures = "0.3.30"
chrono = { version = "0.4.38", features = ["serde"] }
geojson = { version = "0.24.1", features = ["geo-types"] }
geo = "0.28.0"
actix-web-httpauth = "0.8.1"
serde_repr = "0.1.19"
