[package]
name = "management_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
env_logger = "0.11.3"
mongodb = "2.8.2"
serde = "1.0.201"
futures = "0.3.30"
chrono = { version = "0.4.38", features = ["serde"] }
geojson = { version = "0.24.1", features = ["geo-types"] }
geo = "0.28.0"
serde_repr = "0.1.19"
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
casdoor-rust-sdk = "1.3.0"
actix-web-httpauth = "0.8.1"
actix-http = "3.7.0"
serde_json = "1.0.117"
num = "0.4.3"


[patch.crates-io]
simple_asn1 = { path = "simple_asn1" }
