[package]
name = "public_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
geojson = "0.24.1"
mongodb = "2.8.2"
serde = "1.0.200"
